- 4 different wall textures (Nicolas, Darrell)
- added mipmapping with GLU box filter (Darrell)
- added different speeds to Game Settings menu (boring, normal, fast, crazy)
- fixed chase camera starting position
- played with wall dimensions
- experimental speed oszillation
- very cool new model from Charles Babbage
- levels-of-detail for the model
- configure players (human, computer, none)

code changes
- removed clearCol
- added parameters for value, colmap, colwidth to setCol, getCol
  to remove dependency from global variable
- moved all data files (except sound effects) into data/ subdirectory
  this breaks make install of course
- regrouped variable declarations in data.h
- hopefully fixed stupid file loading bug now
- changed MAX_VAR_NAME_LEN to 64
- sanity check for grid_size and speed
- added sound effect stubs to libmikmod code for compatibility
- halfed crash texture
- changed wall texture OGL format to GL_RGB (565 is better than 4444)
- fixed bug with capped walls (wrong texcoords)
- properly shut down SDL sound at exit
- unite special&keyboard callbacks

to 0.54
- fixed bug that caused a crash on non-linux unices: do not free pointer
  returned by getenv
- removed error.h dependancy from sgi_texture.c
- moved all glut stuff to system_glut.c, makes porting to SDL easier
- moved data structures from gltron.h to data.h
- added glutReshapeCallback to center the game area when the window is
  maximised

to 0.53
- added switch/option to capture mouse pointer (useful for Voodoo1/2 owners)
- added switch/option do disable lightcycle turning smoothly
- added switch/option to disable crash texture
- moved lightcycle option to video/options
- added bilinear filtering for wall & crash textures
  (thanks David for pointing that out, I just forgot it)
- new logo from David Banz <David.Banz@ux-2s02.inf.fh-rhein-sieg.de>
- accordingly, changed the color of the menu foreground and background
  to fit the logo